@@ -13,6 +13,9 @@ Version 1.4.8 - CVS
   - Session cookies are turned on, if session.use_cookies is turned off
     in PHP configuration (#1518885).
   - Cleaned whitespace in output buffer when plugins are loaded (#1291209).
+  - Removed conf.pl dependency on Perl IO::Socket module. Automatic detection
+    of supported authentication mechanisms is disabled, if IO::Socket is not
+    available.
 
 Version 1.4.7 - 4th July 2006
 -----------------------------
